--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>jcommon</artifactId>
             <version>1.0.23</version>
         </dependency>
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>jgoodies-looks</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
 
 <!--    <build>-->
